feature: se corrige el metodo de Delete de todos los modelos
